syntax = "proto3";

package server_side.proto;

option go_package =  "github.com/mark8s/go-grpc-examples/server-side/proto";

// 定义发送请求信息
message SimpleRequest{
    // 定义发送的参数，采用驼峰命名方式，小写加下划线，如：student_name
    // 请求参数
    string data = 1;
}

// 定义响应信息
message SimpleResponse{
    // 定义接收的参数
    // 参数类型 参数名 标识号(不可重复)
    int32 code = 1;
    string value = 2;
}

// 定义流相应消息
message StreamResponse{
    // 流式响应数据
    string stream_value = 1;
}

service StreamServer{
    rpc Route(SimpleRequest) returns (SimpleResponse);

    // 服务端流式rpc，在响应数据前添加stream
    rpc ListValue(SimpleRequest) returns (stream StreamResponse);
}






